samples/_failures_safe/1761337809_959a6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb9dd220.c: In function ‘main’:
./samples/SAFE/__tmp_fb9dd220.c:131:20: error: missing terminating " character
  131 |             printf("Error
      |                    ^~~~~~
./samples/SAFE/__tmp_fb9dd220.c:131:13: error: expected expression at end of input
  131 |             printf("Error
      |             ^~~~~~
./samples/SAFE/__tmp_fb9dd220.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb9dd220.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb9dd220.c:131:13: error: expected declaration or statement at end of input
